# PenelopeOS

./: Cargo.toml  README.md
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/arch/x86_64/: allocator.rs  gdt.rs  interrupts.rs  memory.rs  mod.rs
src/arch/x86_64/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs  mod.rs
src/drivers/: keyboard.rs  mod.rs  serial.rs  vga_buffer.rs
src/shell/: mod.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
