[package]
name = "penelope_rust"
version = "0.1.0"
edition = "2018"

[target.'cfg(target_os = "linux")']
rustflags = ["-C", "link-arg=-nostartfiles"]

[target.'cfg(target_os = "windows")']
rustflags = ["-C", "link-args=/ENTRY:_start /SUBSYSTEM:console"]

[target.'cfg(target_os = "macos")']
rustflags = ["-C", "link-args=-e __start -static -nostartfiles"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9" # Maybe i'll write my own bootloader one day, but that day is not today.
volatile = "0.2.6" # For volatile memory accesss
lazy_static = { version = "1.4.0", features = ["spin_no_std"] } # For static variables
spin = "0.5.2" # For spinlocks