[package]
name = "penelope"
version = "0.1.0"
edition = "2018"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = "0.9" # Maybe i'll write my own bootloader one day, but that day is not today.
x86_64 = "0.14.2" # For x86_64 architecture
uart_16550 = "0.2.0" # For serial communication

volatile = "0.2.6" # For volatile memory accesss
lazy_static = { version = "1.4.0", features = ["spin_no_std"] } # For static variables
spin = "0.5.2" # For spinlocks

[target.'cfg(target_os = "linux")']
rustflags = ["-C", "link-arg=-nostartfiles"]

[target.'cfg(target_os = "windows")']
rustflags = ["-C", "link-args=/ENTRY:_start /SUBSYSTEM:console"]

[target.'cfg(target_os = "macos")']
rustflags = ["-C", "link-args=-e __start -static -nostartfiles"]

[package.metadata.bootimage]
test-timeout = 300          # (in seconds)
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", 
            "-serial", "stdio", 
            "-display", "none"]
test-success-exit-code = 33         # (0x10 << 1) | 1